--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       In the heart of Thasi where the air carries the scent of earth and old tradition there lies a story woven with straw. More than just a mat, suku has been a part of daily life for generations. It has hosted prayers, celebrations and quiet moments under the sun.
       To the people of Thasi, suku is both a craft and a memory passed down by hand, tied to identity and pride. Though modern times have brought changes, the community still teaches and preserves the skill, keeping the story alive in each weave. To Thasi, suku isn't just a product woven out of straw, it's woven from history, memory and home.
     </p>
-    <img src="file-YGQG3BTLdxeRwsiGfnZqrx" alt="Sukul Texture">
+    <img src="508120314_1228826355404201_9167176858921125514_n.png" alt="Sukul Texture">
   </div>
 
 </body>
