--- a/index.html
+++ b/index.html
@@ -1,91 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thasi Section</title>
+  <meta charset="UTF-8">
+  <title>Thasi - Story of Sukul</title>
   <style>
     body {
-      background-color: #0a1b35;
+      background-color: #0f1a2b;
+      color: #f5f5f5;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #ffffff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+      line-height: 1.8;
       margin: 0;
+      padding: 40px;
     }
 
-    .card {
-      background-color: #162447;
-      border: 2px solid #463c74;
-      padding: 2rem;
-      max-width: 350px;
+    .container {
+      max-width: 800px;
+      margin: auto;
+    }
+
+    h1 {
       text-align: center;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.4);
-    }
-
-    .card h2 {
       color: #f5a623;
-      font-size: 1.8rem;
-      margin-bottom: 0.5rem;
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
     }
 
-    .divider {
-      height: 1px;
-      background-color: #f5a623;
-      margin: 0.5rem 0 1.2rem;
-      position: relative;
+    p {
+      margin-bottom: 1.6rem;
+      font-size: 1.05rem;
     }
 
-    .divider::before {
-      content: '•';
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      top: -0.7rem;
-      font-size: 1.4rem;
-      color: #f5a623;
+    blockquote {
+      font-style: italic;
+      color: #ddd;
+      margin: 1.8rem 0;
+      padding-left: 1.2rem;
+      border-left: 4px solid #f5a623;
     }
 
-    .card p {
-      font-size: 0.95rem;
-      line-height: 1.6;
-      color: #e6e6e6;
-    }
-
-    .card img {
-      margin-top: 1.2rem;
-      max-width: 100%;
-      border-radius: 6px;
-      border: 4px solid white;
+    .nepali {
+      font-family: 'Noto Sans Devanagari', sans-serif;
+      font-size: 1rem;
+      margin-top: -1rem;
+      margin-bottom: 2rem;
+      color: #cccccc;
     }
   </style>
 </head>
 <body>
 
-  <div class="card">
-    <h2>THASI</h2>
-    <div class="divider"></div>
-    <p>
-     THASI – The Living Legacy of Sukul
-थसी – सुकुलको जीवित सम्पदा
-In the ancient town of Thasi—now known as Siddhipur—the ground tells stories. Here, sukul is not just a woven mat. It is a vessel of memory, prayer, tradition, and pride. Made from straw, but rooted in spirit, sukul has long been part of daily life—hosting rituals, gatherings, rest, and reflection.
+<div class="container">
+  <h1>Thasi – The Story of Sukul</h1>
 
-"सुकुल भन्नेबित्तिकै सिद्दिपुर हो, सिद्दिपुर भनेको सुकुल हो।"
-("To speak of sukul is to speak of Siddhipur; Siddhipur itself is defined by sukul.")
+  <p>In the ancient town of Thasi—now known as Siddhipur—the ground tells stories. Here, sukul is not just a woven mat. It is a vessel of memory, prayer, tradition, and pride. Made from straw, but rooted in spirit, sukul has long been part of daily life—hosting rituals, gatherings, rest, and reflection.</p>
 
-This simple craft is deeply woven into the identity of Thasi. Every mat is hand-crafted with care, using age-old techniques passed down through generations. It is more than just a product—it is a silent witness to the rhythms of life, tied to the soil, the homes, and the hearts of the people.
+  <blockquote>"सुकुल भन्नेबित्तिकै सिद्दिपुर हो, सिद्दिपुर भनेको सुकुल हो।"</blockquote>
+  <p class="nepali">("To speak of sukul is to speak of Siddhipur; Siddhipur itself is defined by sukul.")</p>
 
-Even today, the tradition continues—quietly but purposefully. At the Siddhipur Community Learning Center (CLC), community leader Krishna Kumar Maharjan has taken a vital role in preserving this craft. Under his guidance, the CLC is not just a place of learning—it is a space where sukul weaving is taught, practiced, and honored. It connects young learners with old wisdom, supports community livelihoods, and links local craft to cultural buyers who understand its worth.
+  <p>This simple craft is deeply woven into the identity of Thasi. Every mat is hand-crafted with care, using age-old techniques passed down through generations. It is more than just a product—it is a silent witness to the rhythms of life, tied to the soil, the homes, and the hearts of the people.</p>
 
-"मूल्यको कुरा गर्दा, यदि मानिसले यो शिल्पको महत्व बुझ्न सके, यसको कदर आफैँ बढ्छ।"
-("When it comes to value, if people can truly understand this craft, its importance naturally grows.")
+  <p>Even today, the tradition continues—quietly but purposefully. At the Siddhipur Community Learning Center (CLC), community leader Krishna Kumar Maharjan has taken a vital role in preserving this craft. Under his guidance, the CLC is not just a place of learning—it is a space where sukul weaving is taught, practiced, and honored. It connects young learners with old wisdom, supports community livelihoods, and links local craft to cultural buyers who understand its worth.</p>
 
-Through each weave, sukul tells a story—not just of straw and hand, but of heritage and belonging. It is Thasi’s soft strength, woven from memory, history, and the quiet determination to carry forward a way of life.
-    <img src="508120314_1228826355404201_9167176858921125514_n.png" alt="Sukul Texture">
-  </div>
+  <blockquote>"मूल्यको कुरा गर्दा, यदि मानिसले यो शिल्पको महत्व बुझ्न सके, यसको कदर आफैँ बढ्छ।"</blockquote>
+  <p class="nepali">("When it comes to value, if people can truly understand this craft, its importance naturally grows.")</p>
+
+  <p>Through each weave, sukul tells a story—not just of straw and hand, but of heritage and belonging. It is Thasi’s soft strength, woven from memory, history, and the quiet determination to carry forward a way of life.</p>
+</div>
 
 </body>
 </html>
