--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   <p class="nepali">("When it comes to value, if people can truly understand this craft, its importance naturally grows.")</p>
 
   <p>Through each weave, sukul tells a story—not just of straw and hand, but of heritage and belonging. It is Thasi’s soft strength, woven from memory, history, and the quiet determination to carry forward a way of life.</p>
+  <img src="508120314_1228826355404201_9167176858921125514_n.png" alt="Sukul Texture">
 </div>
 
 </body>
