--- a/index.html
+++ b/index.html
@@ -44,12 +44,17 @@
       margin-top: -1rem;
       margin-bottom: 2rem;
       color: #cccccc;
+      
     }
+    img {
+    display: block;
+    margin: auto;
   </style>
 </head>
 <body>
 
 <div class="container">
+    <img src="image.png" alt="Sukul Texture">
   <h1>Thasi – The Story of Sukul</h1>
 
   <p>In the ancient town of Thasi—now known as Siddhipur—the ground tells stories. Here, sukul is not just a woven mat. It is a vessel of memory, prayer, tradition, and pride. Made from straw, but rooted in spirit, sukul has long been part of daily life—hosting rituals, gatherings, rest, and reflection.</p>
