--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Thasi - Story of Sukul</title>
+  <title>TTHASI – The Living Legacy of Sukul</title>
   <style>
     body {
       background-color: #0f1a2b;
